Remove MD files and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ bootstrap/cache/services.php
 bootstrap/cache/packages.php
 storage/framework/views/*.php
 storage/logs/*.log
+*.md
+*.MD
+README.md
